// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ngrx/Store With component 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  storyComponentElementRef={[Function WithStoreComponent]}
  storyComponentViewContainerRef={[Function ViewContainerRef_]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
>
  <storybook-comp-with-store>
    <div>
      Store is injected
    </div>
  </storybook-comp-with-store>
</storybook-wrapper>
`;

exports[`Storyshots ngrx/Store With template 1`] = `
<storybook-wrapper
  changeDetectorRef={[Function ViewRef_]}
  storyProps$={[Function Observable]}
  storyPropsSubscription={[Function Subscriber]}
>
  <storybook-comp-with-store>
    <div>
      Store is injected
    </div>
  </storybook-comp-with-store>
</storybook-wrapper>
`;
